youtube에 관한것을 gemini로 수정

--- a/netlify.toml
+++ b/netlify.toml
@@ -2,13 +2,6 @@
 functions = "./functions"
 
 [[redirects]]
-from = "dummy/youtube/v3/*"
-to = "/.netlify/functions/dummy/:splat"
+from = "/gemini/*"
+to = "/.netlify/functions/gemini/:splat"
 status = 200
-force = true
-
-[[redirects]]
-from = "/youtube/v3/*"
-to = "/.netlify/functions/youtube/:splat"
-status = 200
-force = true
