--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "author": "bigsaigon333 <likepeppermint@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "node-fetch": "^2.6.1",
-    "querystring": "^0.2.1"
+    "node-fetch": "^2.6.1"
   }
 }
