--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,25 @@
+# 빌드 설정을 정의합니다.
 [build]
-functions = "./functions"
+  functions = "./functions"
 
+# 리다이렉트 규칙을 정의합니다. (기존 설정 유지)
 [[redirects]]
-from = "/gemini/*"
-to = "/.netlify/functions/gemini/:splat"
-status = 200
+  from = "/gemini/*"
+  to = "/.netlify/functions/gemini/:splat"
+  status = 200
+
+# CORS 문제를 해결하기 위한 헤더 규칙을 추가합니다.
+[[headers]]
+  # 이 규칙은 모든 Netlify 함수 경로에 적용됩니다.
+  for = "/.netlify/functions/*"
+  [headers.values]
+    # 모든 출처에서의 요청을 허용합니다.
+    # 보안을 위해 실제 Firebase 앱 주소로 변경하는 것을 권장합니다.
+    # 예: "https://your-firebase-app-name.web.app"
+    Access-Control-Allow-Origin = "*"
+    
+    # 허용할 HTTP 메소드를 지정합니다.
+    Access-Control-Allow-Methods = "POST, GET, OPTIONS"
+    
+    # 프리플라이트(preflight) 요청에서 허용할 헤더를 지정합니다.
+    Access-Control-Allow-Headers = "Content-Type, Authorization"
